# Local-AI-Toys

./: README.md
app/: .gitignore  README.md
app/src/: App.css  App.tsx  api.ts  constants.ts
app/src-tauri/: Info.plist  tauri.conf.json
app/src-tauri/src/: backend.rs  lib.rs  models.rs  permissions.rs  python_setup.rs  system.rs
app/src/assets/: llms.json  personalities.json  voices.json
app/src/components/: ChatHeader.tsx  ChatTranscript.tsx  ExperienceModal.tsx  Layout.tsx  LlmSelector.tsx  ModelSwitchModal.tsx  Sidebar.tsx  VoiceClone.tsx
app/src/pages/: ModelSetup.tsx  Playground.tsx  Settings.tsx  Setup.tsx  Test.tsx  Voices.tsx
app/src/state/: VoiceWsContext.tsx
resources/: README.md
resources/python-backend/: pyproject.toml  server.py  tts.py  utils.py
resources/python-backend/db/: models.py  schema.py  seeds.py  voices.py
resources/python-backend/engine/: characters.py  conversation.py  prompts.py
resources/python-backend/routes/: __init__.py  assets.py  crud.py  device.py  models.py  settings.py
resources/python-backend/services/: __init__.py  firmware.py  pipeline.py  voice_refs.py
